[project]
name = "mellophone-valve"
version = "3.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
httpx = [
    "httpx>=0.28.1",
]
requests = [
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "requests>=2.32.0",
    "pyyaml>=6.0.3",
    "ruff>=0.15.1",
]

[tool.ruff]
target-version = "py37"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG001",  # unused arguments in functions
  "T201",  # print statements are not allowed
]
ignore = [
  "E501",  # line too long, handled by black
  "B008",  # do not perform function calls in argument defaults
  "W191",  # indentation contains tabs
  "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
