[project]
name = "mellophone-valve"
version = "3.1.1"
description = "Python-клиент для Mellophone"
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
httpx = [
  "httpx>=0.23.0,<0.24.0; python_version < '3.8'",
  "httpx>=0.28.1; python_version >= '3.8'",
]
requests = [
  "requests>=2.31.0,<2.32.0; python_version < '3.9'",
  "requests>=2.32.2; python_version >= '3.9'"
]

[dependency-groups]
dev = [
  "httpx>=0.28.1; python_version >= '3.8'",
  "pre-commit>=4.3.0; python_version >= '3.13'",
  "pytest>=9.0.2; python_version >= '3.13'",
  "pyyaml>=6.0.3; python_version >= '3.13'",
  "requests>=2.32.0; python_version >= '3.13'",
  "ruff>=0.15.1; python_version >= '3.13'",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py37"
line-length = 120

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG001",  # unused arguments in functions
  "T201",  # print statements are not allowed
]
ignore = []

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.setuptools]
packages = ["mellophone"]

[tool.setuptools.package-dir]
mellophone = "src/mellophone"
